style.css
@keyframes spin {
  0% {transform: rotate(0deg) translate(-50%, -50%);}
  100% {transform: rotate(360deg) translate(-50%, -50%);}
}

body {
  font-family: "Syne", Arial;
  font-size: 32px;
  line-height: 1.25;
  color: #15403d;
  background-color: #f4e6d8;
  max-width: 1120px;
  margin: 240px auto;
  transition: background-color 0.3s;
  overflow: hidden;
}

p {
  font-family: "Syne Extra";
  color: #e5745d;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 32px;
  text-align: center;
  z-index: 1;
}

header img {
  transition: transform 0.5s;
}

header.scrolled img {
  transform: scale(0.50);
}

section {
  margin: 80px 0;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

section:nth-child(odd) {
  flex-direction: row-reverse;
}

section div {
  padding: 40px;
  position: relative;
}

section img {
  position: relative;
}

div.stamps {
  position: absolute;
  top: 0;
  left: 50%;
  width: 50%
}

div.stamps img {
  position: absolute;
  transform: translate(-50%, -50%);
  animation: spin 30s linear infinite;
}

